[gd_scene load_steps=17 format=2]

[ext_resource path="res://background/background.png" type="Texture" id=1]
[ext_resource path="res://sprites/space_ship.png" type="Texture" id=2]
[ext_resource path="res://scripts/start.gd" type="Script" id=3]
[ext_resource path="res://sprites/fire1.png" type="Texture" id=4]
[ext_resource path="res://sprites/fire2.png" type="Texture" id=5]
[ext_resource path="res://sprites/fire4.png" type="Texture" id=6]
[ext_resource path="res://sprites/fire5.png" type="Texture" id=7]
[ext_resource path="res://sprites/fire6.png" type="Texture" id=8]
[ext_resource path="res://sprites/fire3.png" type="Texture" id=9]
[ext_resource path="res://sprites/logo.png" type="Texture" id=10]
[ext_resource path="res://sounds/spaceship-sound-8 (online-audio-converter.com).wav" type="AudioStream" id=11]
[ext_resource path="res://Commodore Pixeled.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://sounds/explosao.wav" type="AudioStream" id=13]
[ext_resource path="res://sprites/asteroid2.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 12 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="start" type="Node2D"]
script = ExtResource( 3 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 180, 320 )
scale = Vector2( 0.5625, 1 )
texture = ExtResource( 1 )

[node name="space_ship" type="Sprite" parent="."]
position = Vector2( 184, 304 )
scale = Vector2( 0.622583, 0.47861 )
texture = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="logo" type="Sprite" parent="CanvasLayer"]
position = Vector2( 180, 128 )
scale = Vector2( 0.759124, 0.863937 )
texture = ExtResource( 10 )

[node name="start_btn" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 8, 480 )
scale = Vector2( 0.628572, 0.581818 )
normal = ExtResource( 16 )

[node name="quit_btn" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 176, 480 )
scale = Vector2( 0.628572, 0.581818 )
normal = ExtResource( 16 )

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.133
anchor_top = 0.825
anchor_right = 0.422
anchor_bottom = 0.864
margin_left = 0.119999
margin_right = 0.0799866
margin_bottom = 0.039978
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.984314, 0.0392157, 1 )
text = "COMEÃ‡AR"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer"]
anchor_left = 0.6
anchor_top = 0.825
anchor_right = 0.889
anchor_bottom = 0.864
margin_left = -1.52588e-05
margin_right = -0.0400085
margin_bottom = 0.039978
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.984314, 0.0392157, 1 )
text = "SAIR"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 137.325, 413.48 )
scale = Vector2( 0.222277, 0.237357 )
frames = SubResource( 2 )
frame = 4
speed_scale = 3.0
playing = true
flip_v = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 230.763, 413.48 )
scale = Vector2( 0.222277, 0.237357 )
frames = SubResource( 2 )
frame = 4
speed_scale = 3.0
playing = true
flip_h = true
flip_v = true

[node name="fundo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
autoplay = true

[node name="explosao" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.2
[connection signal="pressed" from="CanvasLayer/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/quit_btn" to="." method="_on_quit_btn_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
